HELM/ingress2.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kandula
  annotations:
      ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /kandu
        pathType: Prefix
        backend:
          service:
            name: kandu
            port:
              number: 5000
      - path: /prom
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
